# ldionne.github.io

./: .gitignore  CNAME  LICENSE.md  README.md  _config.yml  about.md  google-analytics.js  index.html  papers.md  resume.tex  talks.md
_code/: CMakeLists.txt
_code/laziness-as-a-comonad/: sketch.hs
_code/pack-indexing/: CMakeLists.txt  __nth_element.hpp  baseline.hpp  benchmark_1.erb.cpp  benchmark_2.erb.cpp  benchmark_3.erb.cpp  chart_1.json  chart_2.json  chart_3.json  flat.hpp  overload.hpp  recursive.hpp  tuple_element.hpp
_code/revisiting-the-tiny-metaprogramming-library/: main.cpp
_code/revisiting-the-tiny-mpl/: CMakeLists.txt  main.cpp  tuple_cat_hana.cpp
_code/tuple-done-right/: linked.hpp
_code/tuple-quest/: CMakeLists.txt  atoms.hpp  baseline.hpp  flat.hpp  lambda.hpp  lambda_operations.hpp  nth_element.hpp  raw.hpp
_code/tuple-quest/get_assembly/: atoms.erb.cpp  baseline.erb.cpp  chart.json  flat.erb.cpp  lambda.erb.cpp  raw.erb.cpp
_code/tuple-quest/get_compile/: atoms.erb.cpp  benchmark_1.erb.cpp  benchmark_2.erb.cpp  chart.json  chart_1.json  chart_2.json  flat.erb.cpp  lambda.erb.cpp
_code/tuple-quest/make_compile/: atoms.erb.cpp  benchmark_1.erb.cpp  benchmark_2.erb.cpp  chart.json  chart_1.json  chart_2.json  flat.erb.cpp  lambda.erb.cpp
_code/tuple-quest/nrvo/: atoms.erb.cpp  baseline.erb.cpp  element.hpp  flat.erb.cpp  table.md
_code/tuple-quest/test/: lambda.cpp
_drafts/: 2015-01-30-is-constexpr-a-functor.md  a-tentative-notion-of-move-independence.md  move-independence-and-why-you-should-care.md  revisiting-the-tiny-metaprogramming-library.md  tuple-done-right.md
_includes/: charts.html  comments.html  google_analytics.html  head.html  series.html
_layouts/: default.html  post.html
_posts/: 2015-01-29-hana-ongoing.md  2015-03-16-laziness-as-a-comonad.md  2015-07-14-empty-variants-and-tuples.md  2015-10-18-GitHub-broken-redirection-of-Pages.md  2015-11-29-efficient-parameter-pack-indexing.md  2016-02-17-a-tentative-notion-of-move-independence.md
_posts/perfect-tuple/: 2015-12-12-lambdas.md  2015-12-12-prelude.md  2015-12-12-state-of-the-art.md  2015-12-12-typed-raw-storage.md  2015-12-13-state-of-the-art.md  2015-12-14-lambdas.md  2015-12-15-typed-raw-storage.md  2015-12-16-compile-time-benchmarks.md  2015-12-17-runtime-benchmarks.md
assets/css/: bootstrap-responsive.min.css  bootstrap.min.css  main.css  main.less
assets/css/bootstrap/: bootstrap.less  variables.less
hana/: index.html
public/css/: poole.css
